
 * Initialized repository, created server.py and README.

2014-01-15  Justin Fila  <filajust@arctic.cse.msu.edu>
 
 * Added an HTTP response and a header/body to display in the browser
 * reviewed this too.

2014-01-22  Justin Fila  <filajust@arctic.cse.msu.edu>

 * Fixed some formatting and merged in changes from code review

2014-01-22  Justin Fila  <filajust@arctic.cse.msu.edu>

 * Made the test work (test_server.py)

2014-01-22  Justin Fila  <filajust@arctic.cse.msu.edu>

 * Added different http response for /content, /file, and /image urls

2014-01-22  Justin Fila  <filajust@arctic.cse.msu.edu>

 * added more tests to the test_server script, differentiate between GET and POST

2014-01-23  Justin Fila  <filajust@arctic.cse.msu.edu>

 * fixed the index out of bounds error

2014-01-26  Justin Fila  <filajust@arctic.cse.msu.edu>

 * added a form page and a submission page that parses the query

2014-01-28  Justin Fila  <filajust@arctic.cse.msu.edu>

 * did the post request parsing, and added more functions

2014-01-30  Justin Fila  <filajust@arctic.cse.msu.edu>

 * fixed the tests. Now works for post requests

2014-01-30  Justin Fila  <filajust@arctic.cse.msu.edu>

 * added check for empty name variables

2014-02-04  Justin Fila  <filajust@arctic.cse.msu.edu>

 * refactored some functions

2014-02-04  Justin Fila  <filajust@arctic.cse.msu.edu>

 * made templating html work, added multipart post, recv works for arbitrary data

2014-02-04  Justin Fila  <filajust@arctic.cse.msu.edu>

 * fixed tests

2014-02-13  Justin Fila  <filajust@arctic.cse.msu.edu>

 * made server work like wsgi server

2014-02-13  Justin Fila  <filajust@arctic.cse.msu.edu>

 * html templates inherit from base.html now

2014-02-20  Justin Fila  <filajust@arctic.cse.msu.edu>

 * added quixote wsgi app, made images and plain text work in my app, added
 * validation to the wsgi app

2014-02-20  Justin Fila  <filajust@arctic.cse.msu.edu>

 * fixed tests, used validation from wsgiref